# finissimo

./: LICENSE  README.md  pyproject.toml
models/pixtral/: config.yaml
models/pixtral/dataset/: synthetic_financial_pix_dataset.jsonl  synthetic_financial_pix_dataset_backup_0.jsonl  synthetic_financial_pix_dataset_finance_llama8.jsonl
models/pixtral/scripts/: generate_dataset.py  generate_dataset_magalu.py
models/pixtral/scripts/models/pixtral/dataset/: synthetic_financial_pix_dataset.json
